[gd_scene load_steps=19 format=3 uid="uid://c6ovpkyegha2i"]

[ext_resource type="Texture2D" uid="uid://dkj6s6022obi0" path="res://Art/hotbar.png" id="1_fdtle"]
[ext_resource type="Script" path="res://Scripts/ui & inventory/main_ui.gd" id="1_jlsw2"]
[ext_resource type="Texture2D" uid="uid://btb3lsxgf8w05" path="res://Art/menu tabs.png" id="2_vd1n6"]
[ext_resource type="PackedScene" uid="uid://dutjtyluty2rm" path="res://Scenes/inventory_slot_display.tscn" id="4_3q8l1"]
[ext_resource type="PackedScene" uid="uid://didcs8bt1m1fj" path="res://Scenes/cursor_item_display.tscn" id="4_377nl"]
[ext_resource type="Texture2D" uid="uid://tytlnjvhxca5" path="res://Art/menu tab icons.png" id="5_ie0lv"]
[ext_resource type="Script" path="res://Scripts/ui & inventory/inventory_display.gd" id="10_0lx4k"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jfvni"]
atlas = ExtResource("2_vd1n6")
region = Rect2(0, 0, 21, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fubql"]
texture = SubResource("AtlasTexture_jfvni")
texture_margin_top = 1.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="AtlasTexture" id="AtlasTexture_bgeqn"]
atlas = ExtResource("2_vd1n6")
region = Rect2(21, 0, 21, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_p24fo"]
texture = SubResource("AtlasTexture_bgeqn")
texture_margin_top = 1.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="AtlasTexture" id="AtlasTexture_u3uf8"]
atlas = ExtResource("2_vd1n6")
region = Rect2(42, 0, 21, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tjcc8"]
texture = SubResource("AtlasTexture_u3uf8")
texture_margin_top = 3.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="AtlasTexture" id="AtlasTexture_gkhxy"]
atlas = ExtResource("5_ie0lv")
region = Rect2(0, 0, 21, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6yat"]
atlas = ExtResource("5_ie0lv")
region = Rect2(21, 0, 21, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_si0uh"]
atlas = ExtResource("5_ie0lv")
region = Rect2(42, 0, 21, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_fshix"]
atlas = ExtResource("5_ie0lv")
region = Rect2(63, 0, 21, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_rq32r"]
atlas = ExtResource("1_fdtle")

[node name="MainUI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_jlsw2")

[node name="TabBar" type="TabBar" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -103.0
offset_top = -54.0
offset_right = -19.0
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/tab_selected = SubResource("StyleBoxTexture_fubql")
theme_override_styles/tab_hovered = SubResource("StyleBoxTexture_p24fo")
theme_override_styles/tab_unselected = SubResource("StyleBoxTexture_tjcc8")
clip_tabs = false
scroll_to_selected = false
tab_count = 4
tab_0/title = ""
tab_0/icon = SubResource("AtlasTexture_gkhxy")
tab_1/title = ""
tab_1/icon = SubResource("AtlasTexture_a6yat")
tab_2/title = ""
tab_2/icon = SubResource("AtlasTexture_si0uh")
tab_3/title = ""
tab_3/icon = SubResource("AtlasTexture_fshix")

[node name="InventoryTexture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -111.0
offset_top = -32.0
offset_right = 111.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 0
texture = SubResource("AtlasTexture_rq32r")

[node name="InventoryDisplay" type="VBoxContainer" parent="InventoryTexture"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 11.0
offset_top = 8.0
offset_right = 213.0
offset_bottom = 26.0
theme_override_constants/separation = 8
script = ExtResource("10_0lx4k")

[node name="HotbarSlots" type="HBoxContainer" parent="InventoryTexture/InventoryDisplay"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 5

[node name="InventorySlotDisplay" parent="InventoryTexture/InventoryDisplay/HotbarSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="InventorySlotDisplay2" parent="InventoryTexture/InventoryDisplay/HotbarSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="InventorySlotDisplay3" parent="InventoryTexture/InventoryDisplay/HotbarSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="InventorySlotDisplay4" parent="InventoryTexture/InventoryDisplay/HotbarSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="InventorySlotDisplay5" parent="InventoryTexture/InventoryDisplay/HotbarSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="InventorySlotDisplay6" parent="InventoryTexture/InventoryDisplay/HotbarSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="InventorySlotDisplay7" parent="InventoryTexture/InventoryDisplay/HotbarSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="InventorySlotDisplay8" parent="InventoryTexture/InventoryDisplay/HotbarSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="InventorySlotDisplay9" parent="InventoryTexture/InventoryDisplay/HotbarSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="InventoryTexture/InventoryDisplay"]
layout_mode = 2
theme_override_constants/margin_top = 2

[node name="OtherSlots" type="GridContainer" parent="InventoryTexture/InventoryDisplay/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 6
columns = 9

[node name="InventorySlotDisplay" parent="InventoryTexture/InventoryDisplay/MarginContainer/OtherSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="InventorySlotDisplay2" parent="InventoryTexture/InventoryDisplay/MarginContainer/OtherSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="InventorySlotDisplay3" parent="InventoryTexture/InventoryDisplay/MarginContainer/OtherSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="InventorySlotDisplay4" parent="InventoryTexture/InventoryDisplay/MarginContainer/OtherSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="InventorySlotDisplay5" parent="InventoryTexture/InventoryDisplay/MarginContainer/OtherSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="InventorySlotDisplay6" parent="InventoryTexture/InventoryDisplay/MarginContainer/OtherSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="InventorySlotDisplay7" parent="InventoryTexture/InventoryDisplay/MarginContainer/OtherSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="InventorySlotDisplay8" parent="InventoryTexture/InventoryDisplay/MarginContainer/OtherSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="InventorySlotDisplay9" parent="InventoryTexture/InventoryDisplay/MarginContainer/OtherSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="InventorySlotDisplay10" parent="InventoryTexture/InventoryDisplay/MarginContainer/OtherSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="InventorySlotDisplay11" parent="InventoryTexture/InventoryDisplay/MarginContainer/OtherSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="InventorySlotDisplay12" parent="InventoryTexture/InventoryDisplay/MarginContainer/OtherSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="InventorySlotDisplay13" parent="InventoryTexture/InventoryDisplay/MarginContainer/OtherSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="InventorySlotDisplay14" parent="InventoryTexture/InventoryDisplay/MarginContainer/OtherSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="InventorySlotDisplay15" parent="InventoryTexture/InventoryDisplay/MarginContainer/OtherSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="InventorySlotDisplay16" parent="InventoryTexture/InventoryDisplay/MarginContainer/OtherSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="InventorySlotDisplay17" parent="InventoryTexture/InventoryDisplay/MarginContainer/OtherSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="InventorySlotDisplay18" parent="InventoryTexture/InventoryDisplay/MarginContainer/OtherSlots" instance=ExtResource("4_3q8l1")]
layout_mode = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="InventoryTexture"]
unique_name_in_owner = true

[node name="CursorItemDisplay" parent="InventoryTexture" instance=ExtResource("4_377nl")]
unique_name_in_owner = true
layout_mode = 2
offset_left = 10.0
offset_top = 29.0
offset_right = 28.0
offset_bottom = 47.0

[connection signal="tab_changed" from="TabBar" to="." method="_on_tab_changed"]
